--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "lineBreaks": "gfm",
     "additionalFooterText": "",
     "anchorCharacter": "&#x2693;",
-    "title": "MDwiki - Markdown based wiki done 100% on the client via javascript"
+    "title": "一点一点去构筑我的世界，HelloWorld"
 }
